[project]
name = "onsides-eu"
version = "0.1.0"
description = "ONSIDES European Union"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyahocorasick>=2.1.0",
]

[project.scripts]
download_files = "onsides_eu.download_files:main"
parse_files = "onsides_eu.parse_files:main"
map_tabular = "onsides_eu.tabular_data_mapping:main"
parse_text = "onsides_eu.text_data_parse:main"
format_text = "onsides_eu.text_data_format:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onsides_eu"]
